--- a/src/css/Category.css
+++ b/src/css/Category.css
@@ -1,10 +1,12 @@
 .Category-div {
   padding-left: 40px;
   padding-right: 40px;
+  padding-bottom: 40px;
+  background-image: linear-gradient(-180deg, var(--background-light) 0%, var(--background-dark) 86%);
 }
 
 .Category-title {
-  margin-top: 10px;
+  margin-top: 40px;
   margin-bottom: 20px;
 }
 
