--- a/src/css/Guideline.css
+++ b/src/css/Guideline.css
@@ -30,12 +30,16 @@
   width: 100%;
 }
 
-.Guideline-comments {
-  text-align: left;
-  padding-left: 40px;
-  padding-right: 40px;
+.Guideline-comments-outer {
   margin-right: 0px !important;
+
+}
+
+.Guideline-comments {
+  margin: auto;
+  text-align: left;
   margin-bottom: 40px;
+  max-width: 92%
 }
 
 
@@ -50,6 +54,10 @@
   width: 100%;
 }
 
+.Card {
+  border: 1px dashed var(--border-color);
+}
+
 .Card-div {
   margin-top: 20px;
 }
@@ -59,9 +67,9 @@
 }
 
 .Comments-divider {
-  width: 30%;
+  width: 20%;
   text-align: center;
-  border-style: dashed;
+  border: 1px dashed var(--border-color);
 }
 
 .Add-comment {
@@ -74,6 +82,7 @@
   display: flex;
   -webkit-flex-direction: row;
   flex-direction: row;
+  margin-bottom: 5px;
 
 }
 
@@ -94,7 +103,6 @@
 }
 
 .Button-div {
-  width: 100%;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
@@ -102,4 +110,5 @@
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
   margin-top: 20px;
+  padding-bottom: 40px;
 }
