--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -9,6 +9,6 @@
    margin-left: 40px;
    padding-top: 20px;
    padding-bottom: 20px;
-   border: 1px dashed var(--logo);
+   border: 1px dashed var(--border-color);
 
 }
