--- a/src/css/About.css
+++ b/src/css/About.css
@@ -7,3 +7,9 @@
     margin-bottom: 80px;
     background-image: linear-gradient(-180deg, var(--background-light) 0%, var(--background-dark) 86%);
 }
+
+.About-text {
+  text-align: left;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
