--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,8 +4,8 @@
   flex-direction: column;
 }
 
-.App-logo {
-  height: 80px;
+.App-logo-image {
+  max-width: 100%;
   float: left;
 }
 
@@ -13,17 +13,46 @@
   height: 100px;
   padding: 20px;
   color: var(--logo);
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .App-intro {
   font-size: large;
+
 }
 
-.App-header-links {
+.Mobile-menu {
+  display: none;
+
+}
+
+.Web-menu {
+  display: inline;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
   flex-direction: row;
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
+  -webkit-flex: 1 0 0;
+  flex: 1 0 0;
+  flex-grow: 1;
+}
+
+@media all and (max-width: 860px) {
+  .Mobile-menu {
+    display: inline;
+  }
+
+  .Web-menu {
+    display: none;
+  }
+
+
 }
