--- a/src/css/Category.css
+++ b/src/css/Category.css
@@ -2,7 +2,7 @@
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;
-  background-image: linear-gradient(-180deg, var(--background-light) 0%, var(--background-dark) 86%);
+
 }
 
 .Category-title {
@@ -14,3 +14,28 @@
   text-align: left;
   margin-bottom: 40px
 }
+
+@media all and (max-width: 860px) {
+
+  .Category-div {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+  }
+
+}
+
+ @media all and (max-width: 640px) {
+
+
+   .Category-text {
+     text-align: left;
+     margin-bottom: 10px;
+   }
+
+   .Category-title {
+     margin-top: 20px;
+     margin-bottom: 10px;
+   }
+
+ }
