--- a/src/css/CommentComponent.css
+++ b/src/css/CommentComponent.css
@@ -24,7 +24,7 @@
   flex-direction: row;
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
-  font-size: 15px;
+  font-size: 1em;
   width: 100%;
 }
 
