--- a/src/css/Guide.css
+++ b/src/css/Guide.css
@@ -4,18 +4,53 @@
   -webkit-flex-direction: row;
   flex-direction: row;
   flex-grow: 1;
+
 }
 
 .content {
    -webkit-flex: 4 0 0;
    flex: 4 0 0;
-   background-color: var(--background-light);
    margin-left: 20px;
    padding: 0px;
+   background-image: linear-gradient(-180deg, var(--background-light) 0%, var(--background-dark) 86%);
    margin-right: 40px;
 }
 .menu {
+  display: inline;
    -webkit-flex: 1 0 0;
    flex: 1 0 0;
    flex-grow: 1;
+}
+
+@media all and (max-width: 860px) {
+  .menu {
+    display: none;
+  }
+
+  .Guide-body {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 40px;
+  }
+
+  .content {
+     margin-left: 0px;
+     margin-right: 0px;
+  }
+
+}
+
+@media all and (max-width: 640px) {
+  .Guide-body {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+  }
+
 }
