--- a/src/css/MenuButton.css
+++ b/src/css/MenuButton.css
@@ -1,6 +1,63 @@
 .ActiveLine {
   border: 2px solid var(--highlight);
-  width: 20%;
+  width: 40%;
   border-radius: 3px
+}
+
+.Page-button {
+  margin-left: 40px;
+  -webkit-align-items: center;
+  align-items: center;
+
+}
+
+.Button {
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+
+@media all and (max-width: 860px) {
+
+  .Page-button {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-align-items: center;
+    align-items: center;
+    margin-left: 0px;
+  }
+
+  .Active-Line-div {
+    order:0;
+    -webkit-flex: 1 0 0;
+    flex: 1 0 0;
+  }
+
+  .Button {
+    order:1;
+    -webkit-flex: 3 0 0;
+    flex: 3 0 0;
+    text-align: left;
+    margin-left: 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+
+  .ActiveLine {
+    border: 2px solid var(--highlight);
+    border-radius: 3px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 10%;
+  }
+
+  .HiddenLine {
+    border: 0px solid var(--highlight);
+  }
+
+
+
 
 }
