--- a/src/css/Category.css
+++ b/src/css/Category.css
@@ -29,13 +29,15 @@
 
 
    .Category-text {
-     text-align: left;
+     text-align: center;
      margin-bottom: 10px;
+     font-size: 0.9em;
    }
 
    .Category-title {
      margin-top: 20px;
      margin-bottom: 10px;
+     font-size: 1.5em;
    }
 
  }
