--- a/src/css/Guideline.css
+++ b/src/css/Guideline.css
@@ -13,6 +13,7 @@
   -webkit-align-items: center;
   align-items: center;
   flex-grow: 1;
+
 }
 
 .Guideline-title {
@@ -33,7 +34,6 @@
 
 .Guideline-comments-outer {
   margin-right: 0px !important;
-
 }
 
 .Guideline-comments {
@@ -62,10 +62,6 @@
 }
 
 
-.Guideline-comment-mobile {
-  display: none;
-}
-
 
 @media all and (max-width: 640px) {
 
@@ -73,24 +69,13 @@
   .Guideline-header {
     -webkit-flex-direction: column;
     flex-direction: column;
-
+    margin-top: -10px;
   }
 
   .Guideline-comment {
-    display: none;
-  }
-
-  .Guideline-comment-mobile {
-    display: inline;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
-     margin-left: 10px;
+    order: 1;
+    width: 100%;
+    margin-bottom: 5px;
 
   }
 
@@ -101,7 +86,9 @@
 
   .Guideline-title {
     margin-left: 5px;
+    margin-right: 5px;
     font-size: 1em;
+    order: 2;
   }
 
   .Card-div {
@@ -114,6 +101,7 @@
     -webkit-align-items: center;
     align-items: center;
     max-width: 400px;
+    margin-bottom: 30px;
   }
 
   .Card {
@@ -122,6 +110,19 @@
 
   .Vote-component {
     order: 1;
+  }
+
+  .Number-div {
+    order: 0;
+    text-align: left;
+    width: 100%;
+    margin-top: -35px;
+    margin-left: -70px;
+
+  }
+
+  .Comments-div {
+    margin-bottom: 20px;
   }
 
 }
