--- a/src/css/Guideline.css
+++ b/src/css/Guideline.css
@@ -61,6 +61,24 @@
   border: 1px dashed var(--border-color);
 }
 
+.Guideline-author {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
+  margin-right: 20px;
+  font-style: italic;
+}
+
+.Author-p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 
 
 @media all and (max-width: 640px) {
@@ -127,6 +145,13 @@
 
   .Comments-div {
     margin-bottom: 20px;
+  }
+
+  .Guideline-author {
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
 }
