--- a/src/css/Category.css
+++ b/src/css/Category.css
@@ -2,18 +2,33 @@
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;
-
 }
 
-.Category-title {
+.Category-header {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-justify-content: center;
+  justify-content: center;
+  align-items: center;
   margin-top: 40px;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .Category-text {
   text-align: left;
   margin-bottom: 40px
 }
+
+.Category-title {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 40px;
+}
+
+
 
 @media all and (max-width: 860px) {
 
@@ -35,7 +50,7 @@
      margin-right: 10px;
    }
 
-   .Category-title {
+   .Category-header {
      margin-top: 20px;
      margin-bottom: 10px;
      font-size: 1.5em;
