Smaller fixes to improve the user experience

--- a/src/css/CommentComponent.css
+++ b/src/css/CommentComponent.css
@@ -8,7 +8,7 @@
   background-color: var(--background-light);
   padding-left: 10px;
   padding-right: 10px;
-  margin-bottom: 10px;
+  margin-top: 10px;
 
 }
 
