--- a/src/css/About.css
+++ b/src/css/About.css
@@ -2,8 +2,8 @@
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-left: 40px;
+    margin-right: 40px;
     margin-bottom: 80px;
     background-image: linear-gradient(-180deg, var(--background-light) 0%, var(--background-dark) 86%);
 }
@@ -60,6 +60,26 @@
   margin: 20px;
 }
 
+/* unvisited link */
+a:link {
+    color: var(--text);
+}
+
+/* visited link */
+a:visited {
+    color: var(--text);
+}
+
+/* mouse over link */
+a:hover {
+    color: var(--actions);
+}
+
+/* selected link */
+a:active {
+    color: var(--text);
+}
+
 
 @media all and (max-width: 860px) {
 
@@ -75,6 +95,12 @@
   .Logo-div {
     -webkit-flex-direction: column;
     flex-direction: column;
+  }
+
+  .Person-div {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 20px;
   }
 }
 
