--- a/src/css/App.css
+++ b/src/css/App.css
@@ -20,6 +20,7 @@
   -webkit-justify-content: flex-start;
   justify-content: flex-start;
   align-items: center;
+  margin-right: 20px;
 }
 
 .App-intro {
@@ -45,6 +46,10 @@
   flex-grow: 1;
 }
 
+.Top-level-menu-buttons {
+  margin-top: 10px;
+}
+
 @media all and (max-width: 860px) {
   .Mobile-menu {
     display: inline;
@@ -55,7 +60,20 @@
   }
 
   .App-header {
+    margin-top: 15px;
+    margin-bottom: 5px;
     padding: 0px;
+  }
+
+  .App-logo-div {
+    margin-left: auto;
+  }
+}
+
+@media all and (max-width: 640px) {
+  .App-header {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
 
