--- a/src/css/MenuButton.css
+++ b/src/css/MenuButton.css
@@ -1,6 +1,6 @@
 .ActiveLine {
   border: 2px solid var(--highlight);
-  width: 40%;
+  width: 15px;
   border-radius: 3px
 }
 
@@ -14,6 +14,21 @@
 .Button {
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.Button-title {
+  font-family: 'Exo', sans-serif;
+  font-weight: 300;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.Button:hover {
+  font-family: 'Exo', sans-serif;
+  color: white;
+  font-weight: 600;
 }
 
 
@@ -31,14 +46,10 @@
 
   .Active-Line-div {
     order:0;
-    -webkit-flex: 1 0 0;
-    flex: 1 0 0;
   }
 
   .Button {
     order:1;
-    -webkit-flex: 3 0 0;
-    flex: 3 0 0;
     text-align: left;
     margin-left: 10px;
     text-transform: uppercase;
