--- a/src/css/About.css
+++ b/src/css/About.css
@@ -2,15 +2,13 @@
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
+    padding-top: 20px;
     margin-left: 40px;
     margin-right: 40px;
     margin-bottom: 80px;
     background-image: linear-gradient(-180deg, var(--background-light) 0%, var(--background-dark) 86%);
 }
 
-.About-title {
-  margin-top: 40px;
-}
 
 .Partners-title {
   margin-top: 60px;
@@ -117,6 +115,7 @@ a:active {
      padding-left: 20px;
      padding-right: 20px;
      padding-bottom: 10px;
+     padding-top: 5px;
      margin-left: 0px;
      margin-right: 0px;
      margin-bottom: 20px;
